--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -67,6 +67,12 @@
     <Compile Include="FrmProgressBar.Designer.cs">
       <DependentUpon>FrmProgressBar.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSobreNostros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSobreNostros.Designer.cs">
+      <DependentUpon>FrmSobreNostros.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmProgressBar.resx">
       <DependentUpon>FrmProgressBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSobreNostros.resx">
+      <DependentUpon>FrmSobreNostros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -197,6 +206,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logo SIDGEN %284%29 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %285%29 %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
