--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -210,5 +210,8 @@
   <ItemGroup>
     <None Include="Resources\descarga %281%29.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Diseño sin título %2811%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
