--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -300,5 +300,11 @@
   <ItemGroup>
     <None Include="Resources\Diseño sin título %2811%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %2813%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10775--58618_MED.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
