--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -354,5 +354,17 @@
   <ItemGroup>
     <None Include="Resources\Ponstant.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %2814%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Loratadina-10-mg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CETIRIZINA-10MG-IF-100-TABLETAS.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\14419-01.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
