--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Antialergicos.Designer.cs">
       <DependentUpon>Antialergicos.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmBeneficios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBeneficios.Designer.cs">
+      <DependentUpon>FrmBeneficios.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Antialergicos.resx">
       <DependentUpon>Antialergicos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmBeneficios.resx">
+      <DependentUpon>FrmBeneficios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHome.resx">
       <DependentUpon>FrmHome.cs</DependentUpon>
@@ -371,6 +380,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GIF3.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN %283%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN %284%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN %285%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %2816%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %2817%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
