--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -401,5 +401,8 @@
   <ItemGroup>
     <None Include="Resources\Logo SIDGEN %2817%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo SIDGEN %2818%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
