--- a/SIGDEN/SIGDEN.csproj
+++ b/SIGDEN/SIGDEN.csproj
@@ -404,5 +404,14 @@
   <ItemGroup>
     <None Include="Resources\Logo SIDGEN %2818%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN %286%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Copi.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eslogan SIGDEN %287%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
